2006-12-12  Richard Sandiford  <richard@codesourcery.com>

	* lib/gcc-dg.exp (${tool}_load): Fix invocation of
	saved_${tool}_load.

2006-12-12  Richard Guenther  <rguenther@suse.de>

	PR middle-end/30147
	* gfortran.fortran-torture/compile/pr30147.f90: New testcase.

2006-12-11  Mark Mitchell  <mark@codesourcery.com>

	PR c++/29732
	* g++.dg/template/crash65.C: New test.
	* g++.dg/template/spec16.C: Tweak error markers.

2006-12-11  Francois-Xavier Coudert  <coudert@clipper.ens.fr>

	PR fortran/29973
	* gfortran.dg/specifics_1.f90: Remove check for CHAR.
	* gfortran.dg/specifics_2.f90: Remove check for CHAR.
	* gfortran.dg/specifics_3.f90: Remove.
	* gfortran.fortran-torture/execute/specifics.f90: Remove test
	for CHAR.

2006-12-10  Thomas Koenig  <Thomas.Koenig@online.de>

	Backport from mainline
	PR libfortran/29568
	* gfortran.dg/convert_implied_open.f90:  Change to
	new default record length.
	* gfortran.dg/unf_short_record_1.f90:  Adapt to
	new error message.
	* gfortran.dg/unformatted_subrecords_1.f90:  New test.
	PR libfortran/30009
	PR libfortran/30056
	* gfortran.dg/read_eof_4.f90:  Add tests.
	* gfortran.dg/readwrite_unf_direct_eor_1.f90:  New test.
	* gfortran.dg/unf_read_corrupted_1.f90: New test.

2006-12-09  Paul Thomas  <pault@gcc.gnu.org>

	PR fortran/29821
	* gfortran.dg/parameter_array_section_1.f90: New test.

	PR fortran/29912
	* gfortran.dg/char_result_12.f90: New test.

	PR fortran/29916
	* gfortran.dg/host_dummy_index_1.f90: Added additional test.

	PR fortran/30003
	* gfortran.dg/allocatable_function_1.f90: Increase the number
	of expected calls of free to 10; the lhs section reference is
	now evaluated so there is another call to bar.  Change the
	comment appropriately.
	* gfortran.dg/array_section_1.f90: New test.

2006-12-07  Lee Millward  <lee.millward@codesourcery.com>

        PR c++/29980
        * g++.dg/ext/attrib27.C: New test.
        * g++.dg/parse/struct-as-enum1.C: Adjust error markers.